padddings for sections
padddings for sections

--- a/index.html
+++ b/index.html
@@ -10,18 +10,29 @@
   </head>
   <body>
     <header class="header content-section content-section_theme_dark">
+      <img />
       <nav>
         <ul>
-          <li></li>
+          <li>Главная</li>
+          <li>О нас</li>
+          <li>Контакты</li>
         </ul>
       </nav>
     </header>
     <main>
-      <section class="content-section content-section_theme_dark">2</section>
-      <section class="content-section content-section_theme_bright">3</section>
-      <section class="content-section content-section_theme_dark">4</section>
-      <section class="content-section content-section_theme_bright">5</section>
+      <section class="cover content-section content-section_theme_dark">
+        <h1>С чистого листа</h1>
+      </section>
+      <section class="intro content-section content-section_theme_dark">
+        8&nbsp;способов борьбы со страхом чистого листа
+      </section>
+      <section class="reasons content-section content-section_theme_bright">
+        Желтая хуйня
+      </section>
+      <section class="how-to content-section content-section_theme_dark">
+        Как все-таки начать что-то делать
+      </section>
     </main>
-    <footer class="content-section content-section_theme_dark">6</footer>
+    <footer class="footer content-section content-section_theme_dark">Футер</footer>
   </body>
 </html>
