added header styles
added header styles

--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
 
       <nav class="header__menu">
         <ul class="header__menu-list">
-          <li class="header__menu-item header__menu-item_active">
-            <a href="#" class="header__menu-link">Главная</a>
+          <li class="header__menu-item">
+            <a href="#" class="header__menu-link header__menu-item_active"
+              >Главная</a
+            >
           </li>
-          <li class="header__menu-item header__menu-item_active">
-            <a href="#" class="header__menu-link">О нас</a>
+          <li class="header__menu-item">
+            <a href="#" class="header__menu-item_active">О нас</a>
           </li>
-          <li class="header__menu-item header__menu-item_active">
-            <a href="#" class="header__menu-link">Контакты</a>
+          <li class="header__menu-item">
+            <a href="#" class="header__menu-item_active">Контакты</a>
           </li>
         </ul>
       </nav>
