block cover ended
block cover ended

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     </header>
     <main>
       <section class="cover content-section content-section_theme_dark">
-        <h1>
-          <span>C</span>
-          <span>чистого</span>
-          <span>листа</span>
+        <h1 class="cover__title">
+          <span class="accent-span">C</span>
+          <span class="accent-span text-center">чистого</span>
+          <span class="accent-span text-right">листа</span>
         </h1>
       </section>
       <section class="intro content-section content-section_theme_dark">
