--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="./fonts/fonts.css" /> -->
+    <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <title>С чистого листа</title>
   </head>
@@ -20,9 +20,7 @@
       <nav class="header__menu">
         <ul class="header__menu-list">
           <li class="header__menu-item">
-            <a href="#" class="header__menu-link header__menu-item_active"
-              >Главная</a
-            >
+            <a class="header__menu-link header__menu-item_active">Главная</a>
           </li>
           <li class="header__menu-item">
             <a href="#" class="header__menu-item_active">О нас</a>
@@ -120,11 +118,101 @@
         </ul>
       </section>
       <section class="how-to content-section content-section_theme_dark">
-        Как все-таки начать что-то делать
+        <h3 class="content-section__subtitle">
+          <span class="accent-span text-right">Почему чистый лист</span>
+          <span class="accent-span">— такой cтрашный?</span>
+        </h3>
+        <p class="content-section__introduction">
+          Чаще всего страх чистого листа появляется не из-за чего-то одного, а
+          из-за совокупности нескольких факторов. Вот что может помочь:
+        </p>
+        <ul class="cards-list">
+          <li>
+            <article class="card card_theme_dark">
+              <div class="card__author">
+                <img
+                  class="card__author-photo"
+                  src="./images/polyarinov.png"
+                  alt="Фото Алексея Поляринова"
+                />
+                <p class="card__author-name">Алексей Поляринов</p>
+                <div class="card__content">
+                  <h4 class="card__title">Начать любыми словами</h4>
+                  <div class="card__text">
+                    <p>
+                      Любыми — без шуток. Если не верите нам, посмотрите,
+                      например, чем открывается эссе Алексея Поляринова «Чарли
+                      Кауфман: расширение пространства». Можно и менее
+                      радикально. Главное, чтобы пустую страницу начали
+                      заполнять символы. Получится своеобразная ловушка для
+                      мозга: он видит, что вы уже начали что-то делать, и ему
+                      становится легче войти в состояние потока.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article class="card card_text card_theme_bright">
+              <div class="card__content">
+                <h4 class="card__title">
+                  Поставить перед собой рамку для фотографии
+                </h4>
+                <div class="card__text">
+                  <p>
+                    Самую обычную: 10 на 15 сантиметров. Уже от одного ощущения,
+                    что предстоит работа над большой и сложной задачей, может
+                    пропасть всякое желание за неё браться. В такие моменты
+                    хорошо помогает загнать задачу в рамки — в прямом смысле.
+                    Сосредоточьтесь на том, чтобы заполнить только пространство
+                    10х15 сантиметров. Что дальше — пока неважно.
+                  </p>
+                </div>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article class="card card_theme_dark">
+              <div class="card__author">
+                <img
+                  class="card__author-photo"
+                  src="./images/bunin.png"
+                  alt="Фото Ивана Бунина"
+                />
+                <p class="card__author-name">Иван Бунин</p>
+                <div class="card__content">
+                  <h4 class="card__title">Сделать из задачи рутину</h4>
+                  <div class="card__text">
+                    <p>
+                      «Писать стихи нужно каждый день, подобно тому как скрипач
+                      или пианист непременно должен каждый день без пропусков по
+                      нескольку часов играть на своём инструменте. В противном
+                      случае ваш талант неизбежно оскудеет, высохнет, подобно
+                      колодцу, откуда долгое время не берут воду. А о чём
+                      писать? О чём угодно. Если у вас в данное время нет
+                      никакой темы, идеи, то пишите просто обо всём, что
+                      увидите», — такой совет своему приятелю дал Иван Бунин.
+                      Нет повода ему не следовать.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </article>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer content-section content-section_theme_dark">
-      Футер
+      <p class="footer__copy">© VЁRSTKA</p>
+      <ul class="footer__links">
+        <li>
+          <a href="#">ВК</a>
+        </li>
+        <li>
+          <a href="#">Ютуб</a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
