--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
             <a class="header__menu-link header__menu-item_active">Главная</a>
           </li>
           <li class="header__menu-item">
-            <a href="#" class="header__menu-item_active">О нас</a>
+            <a href="#" class="header__menu-link header__menu-item_active"
+              >О нас</a
+            >
           </li>
           <li class="header__menu-item">
-            <a href="#" class="header__menu-item_active">Контакты</a>
+            <a href="#" class="header__menu-link header__menu-item_active"
+              >Контакты</a
+            >
           </li>
         </ul>
       </nav>
@@ -76,7 +80,7 @@
           может быть очень много. Вот основные:
         </p>
         <ul class="content-section__list">
-          <li class="content-section__list-item">
+          <li>
             <span class="content-section__list-accent">
               Неуверенность в результате.</span
             >
@@ -94,8 +98,8 @@
           <li>
             <span class="content-section__list-accent">Перфекционизм.</span>
             Когда кажется, что работа не будет сделана идеально, будто бы нет
-            смысла её и начинать. В такие моменты мы можем забыть, что с первого
-            раза что-то получается довольно редко.
+            смысла её и начинать. В такие моменты мы можем забыть, <br />
+            что с первого раза что-то получается довольно редко.
           </li>
           <li>
             <span class="content-section__list-accent"
@@ -119,16 +123,16 @@
       </section>
       <section class="how-to content-section content-section_theme_dark">
         <h3 class="content-section__subtitle">
-          <span class="accent-span text-right">Почему чистый лист</span>
-          <span class="accent-span">— такой cтрашный?</span>
+          <span class="accent-span text-right">Как всё-таки начать</span>
+          <span class="accent-span">что-то делать?</span>
         </h3>
         <p class="content-section__introduction">
           Чаще всего страх чистого листа появляется не из-за чего-то одного, а
           из-за совокупности нескольких факторов. Вот что может помочь:
         </p>
         <ul class="cards-list">
-          <li>
-            <article class="card card_theme_dark">
+          <li class="card card_theme_dark">
+            <article>
               <div class="card__author">
                 <img
                   class="card__author-photo"
@@ -136,7 +140,7 @@
                   alt="Фото Алексея Поляринова"
                 />
                 <p class="card__author-name">Алексей Поляринов</p>
-                <div class="card__content">
+                <div>
                   <h4 class="card__title">Начать любыми словами</h4>
                   <div class="card__text">
                     <p>
@@ -153,9 +157,9 @@
               </div>
             </article>
           </li>
-          <li>
-            <article class="card card_text card_theme_bright">
-              <div class="card__content">
+          <li class="card card_theme_bright">
+            <article>
+              <div>
                 <h4 class="card__title">
                   Поставить перед собой рамку для фотографии
                 </h4>
@@ -172,8 +176,8 @@
               </div>
             </article>
           </li>
-          <li>
-            <article class="card card_theme_dark">
+          <li class="card card_theme_dark">
+            <article>
               <div class="card__author">
                 <img
                   class="card__author-photo"
@@ -181,7 +185,7 @@
                   alt="Фото Ивана Бунина"
                 />
                 <p class="card__author-name">Иван Бунин</p>
-                <div class="card__content">
+                <div>
                   <h4 class="card__title">Сделать из задачи рутину</h4>
                   <div class="card__text">
                     <p>
